welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:12: error: not found: value estSurBIscuit
while (!estSurBIscuit) {avance();}
        ^